#7 [add] fragment에서 fragment 전환 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.onboarding.OnbardingActivity"
+            android:name=".ui.onboarding.OnboardingActivity"
             android:exported="false"></activity>
     </application>
 
