--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,21 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.main.MainActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.main.happy.HappyActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.onboarding.OnboardingActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.storytelling.StoryTellingActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -28,13 +43,6 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".ui.main.happy.HappyActivity"
-            android:exported="true"
-            android:screenOrientation="portrait"></activity>
-        <activity
-            android:name=".ui.onboarding.OnboardingActivity"
-            android:exported="false"></activity>
     </application>
 
 </manifest>
