#10 [chore] 패키징 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,11 @@
         <activity
             android:name=".ui.storytelling.StoryTellingActivity"
             android:exported="true"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.main.happy.addlist.HappyAddListActivity"
+            android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
