#27 [add] splash activity 생성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.onboarding.splash.SplashActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"></activity>
 
     </application>
 
