--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,13 +32,14 @@
             android:exported="false"
             android:screenOrientation="portrait" />
 
+
         <activity
-            android:name=".ui.userdaily.DailyEmptyActivity"
+            android:name=".ui.dailyroutine.dailyroutineedit.DailyRoutineEditActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.userdaily.DailyEditActivity"
+            android:name=".ui.dailyroutine.DailyRoutineActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
 
