[chore] mocklist, 데이터클래스 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.daily.DailyAddActivity"
+            android:name=".ui.dailyroutine.dailyroutineadd.DailyRoutineAddActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
 
