#27 [mod] splash activity 이미지 background로 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,11 +39,6 @@
         <activity
             android:name=".ui.onboarding.splash.SplashActivity"
             android:exported="true"
-            android:screenOrientation="portrait" />
-
-        <activity
-            android:name=".ui.main.happy.addlist.HappyAddListActivity"
-            android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -51,6 +46,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.main.happy.addlist.HappyAddListActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"></activity>
 
         <activity
             android:name=".ui.setting.SettingActivity"
