--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,8 +36,14 @@
             android:name=".ui.storytelling.StoryTellingActivity"
             android:exported="false"
             android:screenOrientation="portrait"></activity>
+        
         <activity
             android:name=".ui.onboarding.splash.SplashActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"></activity>
+
+        <activity
+            android:name=".ui.happyroutine.addlist.HappyAddListActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -46,11 +52,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".ui.main.happy.addlist.HappyAddListActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
 
         <activity
             android:name=".ui.setting.SettingActivity"
