#8 [chore] : 이미지 로드 비율 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,12 @@
             android:name=".ui.storytelling.StoryTellingActivity"
             android:exported="false"
             android:screenOrientation="portrait"></activity>
+
+        <activity
+            android:name=".ui.dailyroutine.dailyroutineadd.DailyRoutineAddActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"></activity>
+
         <activity
             android:name=".ui.onboarding.splash.SplashActivity"
             android:exported="true"
