--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.main.MainActivity"
-            android:exported="false"
+            android:exported="true"
             android:screenOrientation="portrait" />
 
         <activity
@@ -35,7 +35,7 @@
         <activity
             android:name=".ui.storytelling.StoryTellingActivity"
             android:exported="false"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.onboarding.splash.SplashActivity"
             android:exported="true"
@@ -48,7 +48,7 @@
         </activity>
 
         <activity
-            android:name=".ui.main.happy.addlist.HappyAddListActivity"
+            android:name=".ui.happyroutine.addlist.HappyAddListActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
 
@@ -56,9 +56,20 @@
             android:name=".ui.setting.SettingActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.main.LoginActivity"
             android:exported="false"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.happyroutine.HappyRoutineCompleteActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.dailyroutine.DailyRoutineCompleteActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
 
     </application>
