--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,15 +35,10 @@
         <activity
             android:name=".ui.storytelling.StoryTellingActivity"
             android:exported="false"
-            android:screenOrientation="portrait"></activity>
-        
-        <activity
-            android:name=".ui.onboarding.splash.SplashActivity"
-            android:exported="true"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.happyroutine.addlist.HappyAddListActivity"
+            android:name=".ui.onboarding.splash.SplashActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -54,9 +49,20 @@
         </activity>
 
         <activity
+            android:name=".ui.happyroutine.addlist.HappyAddListActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.happyroutine.adddetail.HappyDetailActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".ui.setting.SettingActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.main.LoginActivity"
             android:exported="false"
