#46 [chore] exported 속성값 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,12 +65,12 @@
 
         <activity
             android:name=".ui.happyroutine.HappyRoutineCompleteActivity"
-            android:exported="true"
+            android:exported="false"
             android:screenOrientation="portrait" />
 
         <activity
             android:name=".ui.dailyroutine.DailyRoutineCompleteActivity"
-            android:exported="true"
+            android:exported="false"
             android:screenOrientation="portrait" />
 
     </application>
