--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"></activity>
 
         <activity
             android:name=".ui.onboarding.OnboardingActivity"
@@ -44,12 +44,17 @@
         </activity>
 
         <activity
-            android:name=".ui.dailyroutine.dailyroutineadd.DailyRoutineAddActivity"
+            android:name=".ui.happyroutine.addlist.HappyAddListActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"></activity>
+
+        <activity
+            android:name=".ui.happyroutine.adddetail.HappyDetailActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.happyroutine.addlist.HappyAddListActivity"
+            android:name=".ui.dailyroutine.dailyroutineadd.DailyRoutineAddActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
 
