--- a/.github/workflows/softie_ci.yml
+++ b/.github/workflows/softie_ci.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Copy Secret
       env:
         OCCUPY_SECRET: ${{ secrets.OCCUPY_SECRET }}
-        OCCUPY_SECRET_DIR: app
+        OCCUPY_SECRET_DIR: /home/runner/work/Sopetit-Android/Sopetit-Android/app
         OCCUPY_SECRET_DIR_FILE_NAME: google-services.json
       run: echo $OCCUPY_SECRET | base64 --decode > $OCCUPY_SECRET_DIR/$OCCUPY_SECRET_DIR_FILE_NAME
         
