--- a/.github/workflows/softie_ci.yml
+++ b/.github/workflows/softie_ci.yml
@@ -32,6 +32,7 @@ jobs:
 
     - name: create-json
       id: create-json
+      uses: jsdaniell/create-json@1.1.2
       with:
         name: "google-services.json"
         json: ${{ secrets.GOOGLE_SERVICE_JSON }}
