--- a/.github/workflows/softie_ci.yml
+++ b/.github/workflows/softie_ci.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Create Google-Services.json
       env:
-        GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
+        GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES_BASE64 }}
       run: |
         touch ./app/google-services.json
         echo $GOOGLE_SERVICES >> ./app/google-services.json
