--- a/.github/workflows/softie_ci.yml
+++ b/.github/workflows/softie_ci.yml
@@ -35,7 +35,7 @@ jobs:
         GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES_BASE64 }}
       run: |
         touch ./app/google-services.json
-        echo $GOOGLE_SERVICES >> ./app/google-services.json
+        echo $GOOGLE_SERVICES | base64 -di > ./app/google-services.json
         cat ./app/google-services.json
         
     - name: Lint Check
@@ -52,7 +52,7 @@ jobs:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
         SLACK_TITLE: 'Sofite/PR Check SUCCESS💚'
         MSG_MINIMAL: true
-        SLACK_USERNAME: Sofite-AOS
+        SLACK_USERNAME: Sofite-Android
         SLACK_MESSAGE: 'PR이 완료되었습니다'
 
     - name: On Failed, Notify in Slack
@@ -63,5 +63,5 @@ jobs:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
         SLACK_TITLE: 'Sofite/Android Debug build Fail❌'
         MSG_MINIMAL: true
-        SLACK_USERNAME: Sofite-AOS
+        SLACK_USERNAME: Sofite-Android
         SLACK_MESSAGE: '에러를 확인해주세요'
