--- a/.github/workflows/softie_ci.yml
+++ b/.github/workflows/softie_ci.yml
@@ -18,13 +18,10 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-    - name: Create Google-Services.json
+    - name: Create Google Services JSON File
       env:
-        GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
-      run: |
-        touch ./app/google-services.json
-        echo $GOOGLE_SERVICES > ./app/google-services.json
-        cat ./app/google-services.json
+        GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_BASE64 }}
+      run: echo $GOOGLE_SERVICES_JSON | base64 -di > ./app/google-services.json
         
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
