--- a/.github/workflows/softie_ci.yml
+++ b/.github/workflows/softie_ci.yml
@@ -18,10 +18,8 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-    - name: Create Google Services JSON File
-      env:
-        GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_BASE64 }}
-      run: echo $GOOGLE_SERVICES_JSON | base64 -di > ./app/google-services.json
+    - name: Access Firebase Service
+      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > ./app/google-services.json
         
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
