--- a/.github/workflows/softie_ci.yml
+++ b/.github/workflows/softie_ci.yml
@@ -17,12 +17,17 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: gradle
-
-    - name: Access Firebase Service
-      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > ./app/google-services.json
         
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
+    - name: Create GOOGLE SERVICES JSON
+      run: touch ./app/google-services.json
+
+    - name: Access GOOGLE SERVICES JSON
+      env:
+        GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+      run: echo GOOGLE_SERVICES_JSON >> ./app/google-services.json
 
     - name: Create Local Properties
       run: touch local.properties
