--- a/.github/workflows/softie_ci.yml
+++ b/.github/workflows/softie_ci.yml
@@ -22,12 +22,12 @@ jobs:
       run: chmod +x gradlew
 
     - name: Create GOOGLE SERVICES JSON
-      run: touch ./app/google-services.json
-
+      run: touch ./app/src/google-services.json
+      
     - name: Access GOOGLE SERVICES JSON
       env:
         GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
-      run: echo GOOGLE_SERVICES_JSON >> ./app/google-services.json
+      run: echo GOOGLE_SERVICES_JSON >> ./app/src/google-services.json
 
     - name: Create Local Properties
       run: touch local.properties
