--- a/.github/workflows/softie_ci.yml
+++ b/.github/workflows/softie_ci.yml
@@ -22,9 +22,7 @@ jobs:
       run: chmod +x gradlew
       
     - name: Access GOOGLE SERVICES JSON
-      env:
-        GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
-      run: echo GOOGLE_SERVICES_JSON >> ./app/src/google-services.json
+      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > ./app/google-services.json
 
     - name: Create Local Properties
       run: touch local.properties
