#176 [feat] 뷰페이저, recyclerview 구현 및 mock 데이터 적용

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,11 @@
         </activity>
 
         <activity
+            android:name=".ui.addroutine.list.AddListActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".ui.happyroutine.list.HappyAddListActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
